kubernetes/api1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web1
  template:
    metadata:
      labels:
        component: web1
    spec:
      containers:
        - name: api1
          image: spinlud/multik8s_api1
          ports:
            - containerPort: 8081
