kubernetes/api2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web2
  template:
    metadata:
      labels:
        component: web2
    spec:
      containers:
        - name: api2
          image: spinlud/multik8s_api2
          ports:
            - containerPort: 8081
