kubernetes/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mysql
  template:
    metadata:
      labels:
        component: mysql
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 2000
        fsGroup: 2000
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: db-persistent-volume-claim  
      containers:
        - name: mysql
          image: mysql:5.7.27
          ports:
            - containerPort: 3306            
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
