kubernetes/api1-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api1-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web1
  ports:
    - port: 8081
      targetPort: 8081
