kubernetes/api2-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api2-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web2
  ports:
    - port: 8082
      targetPort: 8082
